--- a/src/components/Terminal.css
+++ b/src/components/Terminal.css
@@ -5,8 +5,8 @@
     color: #d4d4d4; 
     padding: 10px; 
     font-family: 'Fira Code', monospace; 
-    display: flex; 
-    flex-direction: column; 
+    /* display: flex; 
+    flex-direction: column;  */
     overflow-y: auto; 
     border: 1px solid #333; 
     border-radius: 5px; 
